# CustomPlanner

./: LICENSE.md  README.md  pyproject.toml  sandbox.py
Data/: shohei_ohtani_goal_matrix.json
Planner/dev/: 9_by_9_planner.py
