[project]
name = "custom-planner"
version = "0.1.0"
description = "Ability to make custom planners"
authors = [
    {name = "Saathvik Narra",email = "saathvik.narra@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
